--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ main {
     flex-flow: column wrap; /* cajas en columnas y doble linea */
     justify-content: center; /* cajas centradas arriba */
     margin-top: 80px; /* inicio del main para que no lo tape el header */
-    width: 100%; /* ancho del mail */
+    width: 100%; /* ancho del main */
 }
 .mensaje-container {
     overflow: hidden; /* oculta los elementos que se salen del contenedor */
@@ -78,10 +78,27 @@ main {
       transform: translateX(-100%); /* posición final del mensaje, fuera de la pantalla */
     }
 }
+main .titulos h1 {
+    font-family: 'Pacifico', cursive; /* fuente del titulo*/
+    font-size: 24px; /* tamaño del titulo */
+    color: #78BF45; /* color del titulo */
+    margin: 10px;
+    text-align: center;
+}
+main h3 {
+    font-family: 'Pacifico', cursive; /* fuente del titulo*/
+    font-size: 24px; /* tamaño del titulo */
+    color: #78BF45; /* color del titulo */
+    margin: 10px;
+    text-align: center;
+}
 /* mq para tablet */
 @media screen and (min-width:600px) {
     .mensaje {
         animation: cinta-mensaje 16s linear infinite; /* animación de 16 segundos, lineal y un número infinito de repeticiones */
+    }
+    main .titulos h1 {
+        font-size: 32px; /* tamaño del titulo */
     }
 }
 /* mq para laptop */
@@ -89,6 +106,9 @@ main {
     .mensaje {
         font-size: 20px; /* tamaño de fuente de la cinta de mensaje */
         animation: cinta-mensaje 24s linear infinite; /* animación de 24 segundos, lineal y un número infinito de repeticiones */
+    }
+    main .titulos h1 {
+        font-size: 32px; /* tamaño del titulo */
     }
 } 
 /* fin de estilos generales de main */
@@ -102,107 +122,100 @@ main {
     z-index: 9999; /* deja el botom al frente */
  }
  .whatsapp img {
-    width: 2rem; /*ancho boton de ws */
-    height: 2rem; /*alto boton de ws */
+    width: 45px; /*ancho boton de ws */
+    height: 45px; /*alto boton de ws */
  }
-#abajo {
-    margin-top: 0,6rem;
-    background-color: rgba(211, 204, 204, 0); /* fondo de footer */
-    display: flex; /* elementos alineados */
-    flex-flow: row wrap; /* mensaje y logos en una sola fila */
-    align-items: center; /* alineación vertical */
-    padding: 1rem; /* padding del footer */
+footer .container {
+    padding: 10px;
+
 }
-#abajo .abajo__mensaje{
-    text-align: left; /* alienacion del mensaje del footer */
-    font-size: 0.8rem; /* tamaño del mensaje del footer */
-    margin-left: 0.2rem; /* margen del mensaje del footer */
+.menu-footer {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}  
+.menu-footer li {
+    display: inline-block;
+    margin-right: 20px;
 }
-#abajo .abajo__logoIG {
-    height: 3rem; /* alto del logo de ig */
-    width: 3rem; /* ancho del logo de ig */
-    padding: 0.2rem;
-    margin-left: 0.5rem; /* margin del logo de ig */
+.menu-footer li:last-child {
+    margin-right: 0;
 }
-#abajo .abajo__logoFB{
-    height: 45px; /* alto del logo de fb */
-    width: 45px; /* ancho del logo de fb */
-    margin-left: 30px; /* margin del logo de fb */
+.menu-footer li a {
+    display: block;
+    padding: 5px;
+    text-decoration: none;
+    color: #005801;
+}  
+.logoFB {
+    width: 45px;
+    height: 45px;
 }
-.volver-arriba {
-    text-decoration: none; /* sacar el subrayado */
-    text-align: right; /* alineado a la derecha */
-}
-/* mq para tablet */
-@media screen and (min-width:600px) {
-    .whatsapp img {
-        width: 3rem; /*ancho boton de ws */
-        height: 3rem; /*alto boton de ws */
-    }
-    #abajo .abajo__mensaje{
-        font-size: 1rem; /* tamaño del mensaje del footer */
-        margin-left: 1rem; /* margen del mensaje del footer */
-    }
+.logoIG {
+    width: 45px;
+    height: 45px;
+    padding: 2px;
 }
 /* mq para laptop */
 @media screen and (min-width:1024px) {
+    .container {
+        font-size: 24px;
+    }
     .whatsapp img {
-        width: 4rem; /*ancho boton de ws */
-        height: 4rem; /*alto boton de ws */
+        width: 60px; /*ancho boton de ws */
+        height: 60px; /*alto boton de ws */
     }
-    .abajo__logoFB:hover {
-        width: 200px;
-        transform: scale(1.5);
+    .whatsapp img:hover {
+        width: 80px;
+        height: 80px;
+        transform: scale(1.1);
     }
-    .abajo__logoFB {
+    .logoFB:hover {
+        width: 60px;
+        height: 60px;
+        transform: scale(1.1);
+    }
+    .logoFB {
         transition: all .3s;
     }
-    .abajo__logoIG:hover {
-        width: 200px;
-        transform: scale(1.5);
+    .logoIG:hover {
+        width: 60px;
+        height: 60px;
+        transform: scale(1.1);
     }
-    .abajo__logoIG {
+    .logoIG {
         transition: all .3s;
     }
-} 
+    .menu-footer li a:hover {
+        background-color: #EC4E6F;
+        color: #005801; 
+    } 
+}
 /* fin de estilos generales de footer */
 /* fin de estilos generales */
 
 /* comienzo de estilos de home*/
 /* mobile firts*/
-.d-block.w-100 {
-    height: 50vh; /* alto de las fotos del carrusel */
-}
 .seccion-dos {
     display: flex; /* propiedad flex */
-    white-space: nowrap;
     align-items: center; /* alineación vertical */
     justify-content: center; /* alienación horizontal */
-    gap: 10px;
     height: 20vh; /* alto de la seccion con respecto al tamaño de la pantalla */
     background-color: #EC4E6F; /* fondo de footer */
 }
 .seccion-dos p {
     font-size: 16px; /* tamaño letra */
 }
-.seccion-dos img {
-    width: 15%; /* ancho de imagen */
-    height: 40%; /* alto de imagen */
-}
 /* mq para tablet */
 @media screen and (min-width:600px) {
-    .seccion-dos img {
-        width: 20%; /* ancho de imagen */
-        height: 80%; /* alto de imagen */
-    }.seccion-dos img p {
+    .seccion-dos p {
         font-size: 22px;
     }
 }
 /* mq para laptop */
 @media screen and (min-width:1024px) {
-    .seccion-dos img {
-        width: 20%; /* ancho de imagen */
-        height: 100%; /* alto de imagen */
+    .seccion-dos p {
+        font-size: 26px;
     }
 }
 /* fin de estilos de home*/
@@ -225,12 +238,6 @@ main .nosotros-seccion1 .nosotros-seccion1__nosotros {
     flex-direction: column;
     text-align: center; /* alineacion de texto centrada */
 }
-main .nosotros-seccion1 .nosotros-seccion1__nosotros h3 {
-    font-family: 'Pacifico', cursive; /* fuente del titulo*/
-    font-size: 32px; /* tamaño del titulo */
-    color: #78BF45; /* color del titulo */
-    margin-bottom: 10px;
-}
 main .nosotros-seccion1 .nosotros-seccion1__nosotros p {
     font-size: 16px;
 }
@@ -241,12 +248,6 @@ main .nosotros-seccion2 {
     justify-content: center;
     flex-direction: column;
     text-align: center; /* alineacion de texto centrada */
-}
-main .nosotros-seccion2 h3 {
-    font-family: 'Pacifico', cursive; /* fuente del titulo*/
-    font-size: 32px; /* tamaño del titulo */
-    color: #78BF45; /* color del titulo */
-    margin-bottom: 10px;
 }
 main .nosotros-seccion2 .nosotros-seccion2__imgprov {
     display: flex; /* prpiedad flex */
@@ -322,31 +323,12 @@ main .nosotros-seccion2 .nosotros-seccion2__imgprov .mercado img {
 /* fin de estilos de nosotros */
 
 /* comienzo de estilos de productos */
-main .productos-seccion1 {
-    width: 100%; /* ancho de la seccion */
+/* mobile firts*/
+div.col-sm-4 {
+    background-color: #FFDDEE;
 }
-main .productos-seccion1 h3 {
-    font-family: 'Pacifico', cursive; /* fuente del titulo*/
-    font-size: 50px; /* tamaño del titulo */
-    color: #78BF45; /* color del titulo */
-}
-main .productos-seccion1 .productos-seccion1__prod {
-    background-color:#FFDDEE; /* fondo de la seccion*/
-    padding: 20px; /* padding de la seccion */
-    display: flex; /* propiedad flex */
-    flex-direction: row; /* cajas en una fila */
-    justify-content: space-around; /* distribucion horizontal de cajas */
-    font-family: 'Pacifico', cursive; /* fuente del titulo*/
-    font-size: 30px; /* tamaño del titulo */
-    color: #005801; /* color del titulo */
-}
-main .productos-seccion1 .productos-seccion1__prod div {
-    display: flex; /* propiedad flex */
-    flex-direction: column; /* cajas en columnas */
-    align-items: center; /* alineado vertical */
-}
-main .productos-seccion1 .productos-seccion1__prod div img {
-    height: 300px; /* alto de las imagenes */
+.producto-item {
+    width: 100%
 }
 /* fin de estilos de productos */
 
@@ -385,66 +367,25 @@ main .galeria-seccion1 .galeria-seccion1__galeria .galeria__imagen img {
 /* fin de estilos de galeria */
 
 /* comienzo de estilos de contacto */
-main .contacto-seccion1 {
-    width: 100%; /* ancho de la seccion */
+/* mobile firts */
+.container.text-center {
+    background-color: #c8fca4;
+    padding: 10px;
 }
-main .contacto-seccion1 h3 {
-    font-family: 'Pacifico', cursive; /* fuente del titulo*/
-    font-size: 50px; /* tamaño del titulo */
-    color: #78BF45; /* color del titulo */
-    margin-bottom: 10px; /* margen inferior */
-    text-align: center; /* alineacion de texto */
-}
-main .contacto-seccion1 .contacto-seccion1__ubicacion {
-    display: flex; /* propiedad flex */
-    flex-direction: column; /* cajas en columnas */
-    justify-content: space-around; /* distribucion vertical entre cajas */
-    gap: 10px; /* espaciado entre cajas */
-    background-color: #78bf4596; /* fondo de la caja */
-    padding: 20px; /* margen interno de la caja*/
-}
-main .contacto-seccion1 .contacto-seccion1__ubicacion h4 {
+.container.text-center h2 {
     font-family: 'Pacifico', cursive; /* fuente del titulo*/
     font-size: 30px; /* tamaño del titulo */
     color: #005801; /* color del titulo */
     margin-bottom: 10px; /* margen inferior */
 }
-main .contacto-seccion1 .contacto-seccion1__ubicacion div {
-    display: flex; /* propiedad flex */
-    flex-direction: row; /* cajas en fila */
-    justify-content: space-around; /* distribucion forizontal */
-    align-items: center; /* alineación vertical */
-}
-main .contacto-seccion1 .contacto-seccion1__ubicacion div div {
-    display: flex; /* propiedad flex */
-    flex-direction: column; /* cajas en columnas */
-    align-items: center; /* alineacion horizontal */
-    gap: 10px; /* espacio entre elementos */
-}
-main .contacto-seccion1 .contacto-seccion1__ubicacion div table {
-    text-align: left; /* alineacion de la tabla */
-}
-main .contacto-seccion1 .contacto-seccion1__ubicacion div a {
+.col a {
     text-decoration: none; /* sacar decoracion del link */
+}
+.col a .botom-contacto{
     font-size: 30px; /* tamaño de letra */
     background-color: #005801; /* fondo de botom */
     padding: 10px; /* margen interior */
     color: white; /* color de letra */
     box-shadow: 0 0 15px black; /* sombra */
-}
-main .contacto-seccion2 {
-    width: 100%; /* ancho de la seccion */
-    display: flex; /* propiedad flex */
-    flex-direction: column; /* cajas en columnas */
-    justify-content: space-around; /* distribucion vertical entre cajas */
-    gap: 20px; /* espaciado entre cajas */
-    background-color: white; /* fondo de la caja */
-    padding: 20px; /* margen interno de la caja*/
-}
-main .contacto-seccion2 h4 {
-    font-family: 'Pacifico', cursive; /* fuente del titulo*/
-    font-size: 30px; /* tamaño del titulo */
-    color: #005801; /* color del titulo */
-    margin-bottom: 10px; /* margen inferior */
 }
 /* fin de estilos de contacto */
