--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,62 +1,42 @@
 /*paleta de colores*/
-$color-primario: blue;
-$color-secundario: gold; 
+$rosa-claro:#FFDDEE; 
+$verde-manzana:#78BF45; 
+$rosa-fucsia:#EC4E6F; 
+$verde-oscuro:#005801; 
+$blanco: white; 
 
 /* tamaño de pantalla*/
 $mobile-s:320px; 
-$mobile-l: 425px;
-$tablet: 768px;
-$pc: 992px;
-
-/*separaciones (margins y padding)*/
-$espacio-chico: 10px;
-$espacio-medio: 20px;
-$espacio-grande: 40px;
-$espacio-extragrande:60px;
+$tablet:600px;
+$pc:1024px;
 
 /*fuente*/
-$fuente-titulos: 'Kanit', sans-serif;
+$fuente-titulos: 'Pacifico', cursive; 
 $fuente-texto: "Montserrat", sans-serif; 
 
 /* tamaño de fuente*/
-$h1xs:20px;
-$h2xs:18px;
-$h3xs:15px;
-$h4xs:13px;
-$pxs: 11px;
+$size-prin: 32px; 
+$size-menu:16px; 
 
-$h1s:35px;
-$h2s:26px;
-$h3s:22px;
-$h4s:18px;
-$ps: 13px;
-
-$h1m:40px;
-$h2m:30px;
-$h3m:25px;
-$h4m:20px;
-$pm: 14px;
-
-$h1g:60px;
-$h2g:40px;
-$h3g:30px;
-$h4g:25px;
-$pg: 20px;
+$h1-mobile: 24px;
+$h1-tablet: 32px;
+$h1-pc: 32px;
+$h2-mobile:24px;
+$h2-tablet:32px; 
+$h2-pc:32px;
 
 /*mixin*/
-@mixin flex-column-center {
+@mixin flex-center-column {
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    align-items: center;
-
 }
 /*extend*/
 
 .botones{
-    width: 200px;
-    padding: 2px 5px;
-    border-radius: 20px;
-    text-align: center;
-    display: flex;
-    gap: 20px;
+    font-size: 30px; /* tamaño de letra */
+    padding: 10px; /* margen interior */
+    color: $blanco; /* color de letra */
+    box-shadow: 0 0 15px black; /* sombra */
+    margin-top: 20px;
 }
